--- a/Music_Equations.ipynb
+++ b/Music_Equations.ipynb
@@ -82,6 +82,7 @@
         "%cd /content/tegridy-tools/tegridy-tools\n",
         "import os\n",
         "import TMIDIX\n",
+        "from sklearn.externals.joblib import dump, load\n",
         "from sklearn.preprocessing import StandardScaler, RobustScaler\n",
         "import math\n",
         "import numpy as np\n",
@@ -144,10 +145,20 @@
         "print('Mean: %f, StandardDeviation: %f' % (scaler.mean_, math.sqrt(scaler.var_)))\n",
         "# standardization the dataset and print the first 5 rows\n",
         "sts_norm = scaler.transform(sts2)\n",
-        "sts_ints = sts_norm.astype(int, casting='unsafe')\n",
+        "sts_ints = []\n",
+        "for d in sts_norm.tolist():\n",
+        "  #print(d * 10000)\n",
+        "  #z = 5\n",
+        "  #y = round(d[0], math.ceil(-math.log10(d[0])) + z)\n",
+        "  #sts_ints.append(y)\n",
+        "  sts_ints.append(abs(math.ceil(d[0])))\n",
         "for i in range(15):\n",
-        "\tprint(sts_ints[i])\n",
+        "\t  print(sts_ints[i])\n",
+        "\n",
+        "dump(scaler, '/content/sts_scaler.bin', compress=True)\n",
+        "\n",
         "print('=====')\n",
+        "\n",
         "# prepare data for standardization\n",
         "durs1 = np.asarray(durs)\n",
         "durs2 = durs1.reshape((len(durs1), 1))\n",
@@ -157,10 +168,18 @@
         "print('Mean: %f, StandardDeviation: %f' % (scaler1.mean_, math.sqrt(scaler1.var_)))\n",
         "# standardization the dataset and print the first 5 rows\n",
         "durs_norm = scaler1.transform(durs2)\n",
-        "durs_ints = durs_norm.astype(int, casting='unsafe')\n",
+        "\n",
+        "\n",
+        "durs_ints = []\n",
+        "for d in durs_norm:\n",
+        "  #print(d * 10000)\n",
+        "  #z = 5\n",
+        "  #y = round(d, math.ceil(-math.log10(d)) + z)\n",
+        "  #durs_ints.append(y)\n",
+        "  durs_ints.append(abs(math.ceil(d[0])))\n",
         "for i in range(15):\n",
-        "\tprint(durs_ints[i])\n",
-        " "
+        "\t  print(durs_ints[i])\n",
+        "dump(scaler1, '/content/sts_scaler1.bin', compress=True)\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -173,21 +192,33 @@
       },
       "source": [
         "#@title Decode back to MIDI\n",
+        "floats_vs_ints = False #@param {type:\"boolean\"}\n",
         "out_sts = []\n",
-        "z = sts_ints.astype(float)\n",
+        "\n",
+        "if floats_vs_ints:\n",
+        "  z = sts_norm\n",
+        "else:\n",
+        "  z = np.asarray(sts_ints, dtype=float) # / 20000\n",
+        "\n",
         "# inverse transform and print the first 5 rows\n",
         "inversed = scaler.inverse_transform(z)\n",
         "for i in range(len(z)):\n",
         "  #print(int(inversed[i]))\n",
-        "  out_sts.append(int(inversed[i]))\n",
+        "  out_sts.append(math.ceil(inversed[i]))\n",
+        "\n",
         "print('========')\n",
+        "\n",
         "out_durs = []\n",
-        "z = durs_ints.astype(float)\n",
+        "if floats_vs_ints:\n",
+        "  z = durs_norm\n",
+        "else:\n",
+        "  z = np.asarray(durs_ints, dtype=float) #/ 20000\n",
+        "\n",
         "# inverse transform and print the first 5 rows\n",
         "inversed = scaler1.inverse_transform(z)\n",
         "for i in range(len(z)):\n",
         "  #print(int(inversed[i]))\n",
-        "  out_durs.append(int(inversed[i]))\n",
+        "  out_durs.append(math.ceil(inversed[i]))\n",
         "\n",
         "\n",
         "song = []\n",
