--- a/Music_Equations.ipynb
+++ b/Music_Equations.ipynb
@@ -109,7 +109,8 @@
       "source": [
         "#@title Load the source MIDI file\n",
         "full_path_to_MIDI_file = \"/content/tegridy-tools/tegridy-tools/seed2.mid\" #@param {type:\"string\"}\n",
-        "data = TMIDIX.Optimus_MIDI_TXT_Processor(full_path_to_MIDI_file, MIDI_patch=range(0, 127), MIDI_channel=-1)"
+        "perfect_timings = True #@param {type:\"boolean\"}\n",
+        "data = TMIDIX.Optimus_MIDI_TXT_Processor(full_path_to_MIDI_file, MIDI_patch=range(0, 127), MIDI_channel=-1, perfect_timings=perfect_timings)"
       ],
       "execution_count": null,
       "outputs": []
