--- a/Music_Equations.ipynb
+++ b/Music_Equations.ipynb
@@ -59,14 +59,14 @@
     {
       "cell_type": "code",
       "metadata": {
-        "cellView": "form",
-        "id": "8U9gkI2Aex90"
+        "id": "8U9gkI2Aex90",
+        "cellView": "form"
       },
       "source": [
         "#@title Install dependencies\n",
         "%cd /content/\n",
         "!git clone https://github.com/asigalov61/tegridy-tools\n",
-        "!pip install sklearn"
+        "!pip install -U scikit-learn"
       ],
       "execution_count": null,
       "outputs": []
@@ -82,7 +82,7 @@
         "%cd /content/tegridy-tools/tegridy-tools\n",
         "import os\n",
         "import TMIDIX\n",
-        "from sklearn.externals.joblib import dump, load\n",
+        "from joblib import dump, load\n",
         "from sklearn.preprocessing import StandardScaler, RobustScaler\n",
         "import math\n",
         "import numpy as np\n",
@@ -193,13 +193,13 @@
       },
       "source": [
         "#@title Decode back to MIDI\n",
-        "floats_vs_ints = False #@param {type:\"boolean\"}\n",
+        "floats_vs_ints = True #@param {type:\"boolean\"}\n",
         "out_sts = []\n",
         "\n",
         "if floats_vs_ints:\n",
         "  z = sts_norm\n",
         "else:\n",
-        "  z = np.asarray(sts_ints, dtype=float) # / 20000\n",
+        "  z = np.asarray(sts_ints, dtype=float).reshape(-1, 1) # / 20000\n",
         "\n",
         "# inverse transform and print the first 5 rows\n",
         "inversed = scaler.inverse_transform(z)\n",
@@ -213,7 +213,7 @@
         "if floats_vs_ints:\n",
         "  z = durs_norm\n",
         "else:\n",
-        "  z = np.asarray(durs_ints, dtype=float) #/ 20000\n",
+        "  z = np.asarray(durs_ints, dtype=float).reshape(-1, 1) #/ 20000\n",
         "\n",
         "# inverse transform and print the first 5 rows\n",
         "inversed = scaler1.inverse_transform(z)\n",
